[test] permission test